feat(hop): implement organization commands
